# elderly-care-app

./: .gitignore  AUTO_PUSH_SETUP.md  BOOTSTRAP_QUICK_START.md  CARE_NOTES_FORM_UPDATED.md  CHECK_EMAIL_DELIVERY.md  CLICKSEND_SETUP.md  DEBUG_NETWORK_REQUESTS.md  DEPLOYMENT.md  DEPLOY_TO_CLOUD.md  DEVELOPMENT_TOOLS.md  DOMAIN_TROUBLESHOOTING.md  EMAIL_BOUNCE_FIX.md  EMAIL_SERVICE_INFO.md  EMAIL_SETUP.md  EMAIL_TO_SMS_SETUP.md  FAVICON_GUIDE.md  FEATURE_SUGGESTIONS.md  FINAL_PUSH_STEPS.md  FIX_IPHONE_ACCESS.md  FIX_NETWORK_TAB_ISSUE.md  FIX_PUSH_ISSUE.md  FREE_NOTIFICATION_SOLUTION.md  GITHUB_DESKTOP_PUSH.md  GITHUB_RAILWAY_GUIDE.md  GIT_PUSH_GUIDE.md  HOW_TO_CHECK_IF_PUSH_WORKED.md  HOW_TO_SEE_NETWORK_REQUESTS.md  INSTALL_EXTENSIONS.md  INSTALL_GITHUB_CLI.md  LOGIN_TROUBLESHOOTING.md  LOGO_DESIGN_GUIDE.md  MANUAL_PUSH_GUIDE.md  MINIFICATION.md  MONITORING_SETUP.md  NOTIFICATION_IMPLEMENTATION_COMPLETE.md  PROJECT_STATUS_AND_PRIORITIES.md  PROJECT_STATUS_REPORT.md  PUSH_TO_GITHUB.md  PUSH_WITH_NEW_TOKEN.md  PUSH_WITH_TOKEN.md  (+64 more)
elderly-care-app/: .eslintrc.json  .prettierignore  CARE_NOTES_RECOMMENDATIONS.md  CLICKSEND_SETUP.md  CLICKSEND_WHATSAPP_SETUP.md  COST_ANALYSIS.md  CREATE_APP_PASSWORD_STEPS.md  EMAIL_NOT_RECEIVED_TROUBLESHOOTING.md  EMAIL_SETUP_OPTIONS.md  EMAIL_SOLUTION_RENDER.md  GO_TO_APP_PASSWORDS.md  HOW_TO_RUN_EMAIL_TEST.md  INSTALL_NODE.md  MOBILE_ACCESS.md  NAMECHEAP_DNS_SETUP.md  NOTIFICATION_STATUS.md  Open App with Web Inspector.command  README_START_SERVER.md  REMOVED_DEBUG_STYLES.md  RESEND_SETUP.md  SETUP_EMAIL_NOW.md  SMS_NOTIFICATION_PLAN.md  (+30 more)
