[project]
name = "elderly-care-app"
version = "1.0.0"
description = "Elderly Care Management Application"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "openai>=2.9.0",
    "python-dotenv>=1.2.1",
    "marshmallow>=3.20.0",
    "marshmallow-sqlalchemy>=0.29.0",
    "reportlab>=4.2.5",
    "pypdf>=5.0.0",
    "pdfminer.six>=20240706"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
